# Vinicius_de_Souza_Caffeu_embarcatech_HBr_2025

./: README.md
Projetos/: read.me
Projetos/Contador decrescente com registro de eventos por interrupção/: CMakeLists.txt  README.md  contador_decrescente.c  read.me
Projetos/Contador decrescente com registro de eventos por interrupção/inc/: read.me
Projetos/Leitura dos sinais analógicos do joystick/: CMakeLists.txt  README.md  joystick.c
Projetos/Monitor da temperatura interna da MCU/: CMakeLists.txt  README.md  temperatura_mcu.c
